app/css/template.css
/* ... */
.help-block {
    font-size: 0.9em;
    color: #999;
    padding: 0 0 5px 0;
    margin: 0;
    font-weight: 500;
}
.registerpage-content table {
    width: 100%;
}
#Record blockquote {
    font-size: inherit!important;
}
#Record .panel-body {
    padding: 10px;
    background-color: #ffffff;
}
#Record .km-value {
    margin-bottom: 5px;
}
#Record .panel-heading {
    padding: 10px;
    border-bottom: 1px solid transparent;
    border-top-left-radius: 0;
    border-top-right-radius: 0;
}
#Record h3 {
    padding: 0;
    margin: 0;
}
#Record h4 {
    font-size: 14px;
    padding: 0;
    margin: 0;
    text-transform: uppercase;
    color: white!important;
}
#Record label {
    margin-bottom: 0;
    font-weight: 500!important;
    color: #666;
    font-size: 12px;
    display: inline;
}
#Record .panel-footer {
    padding: 10px;
    margin: 0;
    height: auto;
    border-radius: 0;
}
.panel {
    margin: 0!important;
    padding: 0!important
}
#Record .panel-footer,
#Record .panel,
#Record .panel-header {
    border-radius: 0!important;
}
#Record .panel-footer .uid {
    font-weight: 500;
    color: #428bca!important;
}
#Record .panel-footer .date {
    font-weight: 500;
    color: #666!important;
    text-transform: uppercase;
}
#Record tr {
    background-color: transparent;
}
#Record legend {
    padding-top: 10px;
    margin-bottom: 10px;
    font-weight: bold;
}
#Record .help-block {
    display: inline!important;
}
#Record {
    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
}
#Record .reflink:link {
    color: #428bca!important;
}
#Record .reflink:visited {
    color: #428bca!important;
}
#Record .reflink:hover {
    color: #428bca!important;
}
#Record .reflink:active {
    color: #428bca!important;
}
#Record .help-block {
    font-size: 11px;
    color: #999;
    padding: 0 0 0 3px;
    margin: 0 0 5px 0;
    display: inline-block;
    font-weight: 500;
    text-transform: none;
}
#Record .modal-dialog {
    width: 650px;
    margin: 30px auto;
}

#Record .pre-wrap{
white-space: pre-wrap;
}

.partystatus {
    font-size: 1rem;
    margin-right: 10px;
    white-space: nowrap;
    font-weight: bold;
}

/* .party-status-align .party-date-text {
    margin-left: -12px !important;
} */

#government {
    float: right;
}
#government .partystatus {
    font-size: 10px;
    margin-left: 10px!important;
    white-space: nowrap;
    background-color: transparent!important;
    border: 0;
    padding: 0;
    border-radius: 0;
    position: relative;
    top: 0px;
    font-weight: 500;
    text-transform: uppercase;
}
/* #government .color-party {
    color: #00405C!important;
}
#government .color-non-party {
    color: #636363!important;
}
#government .color-inbetween {
    color: #EC971F!important;
} */
.km-value {
    overflow: hidden;
}
.well-help {
    background-color: rgba(25, 25, 25, 0.2);
    border: 0;
    margin-bottom: 0;
    margin-top: 20px;
}

.help-info {
    padding: 0;
    margin: 0 0 5px 0;
    font-weight: 500!important;
    color: #666;
    font-size: 12px;
    display: block;
}
legend+ .help-info {
    position: relative;
    top: -15px;
}

#RecordDetails td {
    padding-right: 5px;
}
#RecordDetails label {
    color: #666;
}

.tooltip-inner {
    max-width: 350px;
}
.selected-reference-uid {
    font-size: 14px;
    font-weight: 500;
    text-transform: uppercase;
    padding-right: 5px;
    border-right: 1px solid #ddd;
    display: inline;
}
.selected-reference-name {
    font-size: 12px;
    font-weight: 500;
    /*text-transform: uppercase;*/
    
    padding-right: 5px;
    padding-left: 5px;
    border-right: 1px solid #ddd;
    color: #333;
    display: inline;
}
.selected-reference-title {
    font-size: 12px;
    font-weight: 500;
    /*text-transform: uppercase;*/
    
    padding-left: 5px;
    color: #333;
    display: inline;
}
.km-select-description {
    font-size: 0.9em;
    color: #999;
    padding: 0 0 5px 0;
    margin: 0;
    font-weight: 500;
}

.modal-header h3 {
    margin: 0px;
}


.jr_overlay{
     left:0; 
    opacity: 0.5 !important;
}
.jr_container {
    border-radius: 5px;
    background-color: #666!important;
    border: 1px solid #111!important;
}
.jr_container.jr_element.jr_pos_bottom:after{
     border-bottom: 12.5px solid #111!important;
}
.jr_container.jr_element.jr_pos_top:after {
       border-top: 12.5px solid #111!important;
}
.jr_container.jr_element.jr_pos_left:after {
       border-left: 12.5px solid #111!important;
}
.jr_container.jr_element.jr_pos_right:after {
       border-right: 12.5px solid #111!important;
}
.jr_title{
    color:#FFF!important;
    font-size:120%!important;
}
.jr_content{
    color:#eee!important;
}
.jr_next{
     background-color:#428bca!important;
}
.jr_target{box-shadow: none!important;}

.need-help-jr.jr_pos_bottom,.need-more-help-jr.jr_pos_top, .work-flow-save-draft-jr.jr_pos_bottom{
    margin-left: -30px !important;
}
.need-help-jr.jr_pos_bottom{
    top: 50px !important;
}
.need-help-jr.jr_pos_bottom:after {
    left: auto !important;
    right: 10px !important;
}
.need-more-help-jr.jr_pos_top:after{
    left: auto !important;
    right: 25px !important;
}
.work-flow-save-draft-jr.jr_pos_bottom:after {
    margin-right: 90px;
}
.search-export-records-jr.jr_pos_left {
    margin-top: 12px !important;
    margin-left: 5px !important;
}
.search-send-records-jr.jr_pos_top{
    margin-left: 15px !important;
}
.search-sort-by-records-jr.jr_pos_bottom{
    margin-left: 30px !important;
    margin-top: 25px !important;
}
.search-view-type-records-jr.jr_pos_top{
    margin-left: 60px !important;
}
.search-global-search-jr.jr_pos_top:after{
    margin-left: 30px;
}
.country-sorting-records-jr.jr_pos_top:after {
    margin-left: 30px;
}
.label-party {font-size: 16px;background-color: #5F4586;color:white; min-width:30px}
.label-nonparty {font-size: 16px;background-color: #333;color:white; min-width:30px}
/* ... */

